horisontal scrollbar issue

--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,29 @@ body {
   background-color: white;
   color: black;
   width: 100%;
-  max-width: 100%;
   overflow-x: hidden;
+  margin: 0; 
+  padding: 0; 
+  min-height: 100vh; 
+  display: flex; 
+  flex-direction: column; 
+}
+
+main {
+  flex: 1 0 auto; 
+}
+
+.container, .container-fluid {
+  width: 100%; 
+  padding-right: 15px; 
+  padding-left: 15px; 
+  margin-right: auto; 
+  margin-left: auto; 
+  box-sizing: border-box; 
 }
 
 html {
-  max-width: 100%;
+  width: 100%;
   overflow-x: hidden;
   margin: 0; 
   padding: 0; 
@@ -366,10 +383,17 @@ li {
 }
 
 .padding {
-  padding-left: 70px;
-  padding-right: 70px;
+  padding-left: 15px;
+  padding-right: 15px;
   text-align: center;
-  align-items: center;
+}
+
+@media (min-width: 768px) {
+    .padding {
+      padding-left: 70px;
+      padding-right: 70px;
+    }
+
 }
 
 .btn-container {
